# hummer_systems_task

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
api/v1/: urls.py
api/v1/auth/: serializers.py  urls.py  views.py
api/v1/users/: serializers.py  urls.py  views.py
core/: __init__.py  config.py  message_broker.py  settings.py  urls.py
deploy/: .env.example  Dockerfile  docker-compose-prod.yml  entrypoint.sh  requirements.txt
static/: postman_collection.json
users/: admin.py  managers.py  models.py  utils.py
users/migrations/: 0001_initial.py
